--- a/.gitignore
+++ b/.gitignore
@@ -395,4 +395,11 @@ FodyWeavers.xsd
 *.msp
 
 # JetBrains Rider
+.idea/
 *.sln.iml
+
+# Remove LocalDb Files
+*.db
+*.db-*
+
+Battleforged.DataService/Data/
